# MAVSDK

./: .gitignore  steps_to_run.txt
examples/subscribe_states/: CMakeLists.txt  subscribe_state.cpp
examples/takeoff_and_land/: takeoff_and_land.cpp
examples/trigger_micasense/: CMakeLists.txt  cloud.cpp  cloud.hpp  micasense.cpp  micasense.hpp  trigger_micasense.cpp
examples/trigger_micasense_import/: CMakeLists.txt  cloud.hpp  trigger_micasense.cpp  trigger_micasense_import.cpp
src/integration_tests/: camera_format.cpp
waypoints/: block_y.plan  block_y_m860.plan  prsb.plan
